--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ sidebar-avatar: /img/qrcode_github.com.png      # use absolute URL, seeing it's 
 
 # SNS settings
 RSS: false
-#weibo_username:     meshware
+weibo_username:     chzker
 #zhihu_username:     meshware
 github_username:    meshware
 #facebook_username:  meshware
 #jianshu_username:   meshware
-#twitter_username:   meshware
+twitter_username:   zhiguo_chen
 
 
 
@@ -57,16 +57,16 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+disqus_username: zhiguochen
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: meshware.github.io    #仓库名称
+  owner: chenzhiguo    #github用户名
+  admin: chenzhiguo
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
